--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+   <div class="placeholder">
+       I am Saima.
+      
+   </div>  
 
 </body>
 </html>
